@@ -15,6 +15,15 @@
   </printer>
   <printer>
    <id>printer/Apple-ImageWriter_II</id><!-- Apple ImageWriter II -->
+   <comments>
+    <en>High resolution</en>
+   </comments>
+  </printer>
+  <printer>
+   <id>printer/Apple-ImageWriter_LQ</id><!-- Apple ImageWriter LQ -->
+   <comments>
+    <en>High resolution</en>
+   </comments>
   </printer>
  </printers>
 </driver>
