@@ -17,6 +17,15 @@
   </printer>
   <printer>
    <id>printer/Apple-ImageWriter_II</id><!-- Apple ImageWriter II -->
+   <comments>
+    <en>Low resolution</en>
+   </comments>
+  </printer>
+  <printer>
+   <id>printer/Apple-ImageWriter_LQ</id><!-- Apple ImageWriter LQ -->
+   <comments>
+    <en>Low resolution</en>
+   </comments>
   </printer>
  </printers>
 </driver>
