@@ -3,12 +3,17 @@
  <url>http://www.cs.wisc.edu/~ghost/doc/printer.htm</url>
  <execution>
   <ghostscript />
-  <prototype>gs -q -dBATCH -dPARANOIDSAFER -dQUIET -dNOPAUSE -sDEVICE=iwlq%A%Z -sOutputFile=- -</prototype>
+  <prototype />
  </execution>
- 
+ <comments>
+  <en>See Driver 'iwhi'.</en>
+ </comments>
  <printers>
   <printer>
    <id>printer/Apple-ImageWriter_LQ</id><!-- Apple ImageWriter LQ -->
+   <comments>
+    <en>LQ mode (Very high resolution)</en>
+   </comments>
   </printer>
  </printers>
 </driver>
