@@ -18,11 +18,11 @@
   <constraints>
      <constraint sense="true">
       <driver>iwhi</driver>
-      <arg_defval>ev/663</arg_defval>
+      <arg_defval>ev/imagewriter-Resolution-160x72dpi</arg_defval>
      </constraint>
   </constraints>
   <enum_vals>
-   <enum_val id="ev/662">
+   <enum_val id="ev/imagewriter-Resolution-120x72dpi">
     <ev_longname>
      <en>120x72 dpi</en>
     </ev_longname>
@@ -33,20 +33,55 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>iwlo</ev_driverval>
+    <ev_driverval>appledmp</ev_driverval>
    </enum_val>
-   <enum_val id="ev/663">
+   <enum_val id="ev/imagewriter-Resolution-160x72dpi">
     <ev_longname>
-     <en>120x144 dpi</en>
+     <en>160x72 dpi</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>120x144dpi</en>
+     <en>160x72dpi</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>iwlo</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/imagewriter-Resolution-160x144dpi">
+    <ev_longname>
+     <en>160x144 dpi</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>160x144dpi</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
     <ev_driverval>iwhi</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/imagewriter-Resolution-320x216dpi">
+    <ev_longname>
+     <en>320x216 dpi</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>320x216dpi</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>iwlq</ev_driverval>
+    <constraints>
+     <constraint sense="false">
+      <driver>iwhi</driver>
+     </constraint>
+     <constraint sense="true">
+      <make>Apple</make>
+      <model>ImageWriter LQ</model>
+     </constraint>
+    </constraints>
    </enum_val>
   </enum_vals>
 </option>
