@@ -5,7 +5,7 @@
     <dotmatrix/><!--not "color"-->
     <resolution>
       <dpi>
-        <x>120</x>
+        <x>160</x>
         <y>144</y>
       </dpi>
     </resolution>
