@@ -27,8 +27,15 @@
   <!--no known parport probe information--></autodetect>
   <functionality>B</functionality>
   <driver>iwhi</driver>
-  <unverified/><!--no "contrib_url"-->
+  <!--no "contrib_url"-->
   <comments>
-    <en>The ImageWriter II is a four-color dot matrix printer from Apple. Optionally can be driven using AppleTalk/PAP with an option add-on card, LocalTalk card or bridge to Linux machine, kernel AppleTalk support, and netatalk.</en>
+    <en>
+
+    The ImageWriter II is a four-color dot matrix printer from
+    Apple. Optionally can be driven using AppleTalk/PAP with an option
+    add-on card, LocalTalk card or bridge to Linux machine, kernel
+    AppleTalk support, and netatalk.
+
+    </en>
   </comments>
 </printer>
