@@ -22,4 +22,6 @@
   <!--no known parport probe information--></autodetect>
   <functionality>A</functionality>
 
-  <driver>iwlq</driver><!--verified--><!--no "contrib_url"--><!--no comments!--></printer>
+  <driver>iwhi</driver>
+  <!--verified--><!--no "contrib_url"--><!--no comments!-->
+</printer>
