@@ -1,3 +1,11 @@
+2003-07-23  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Apple-ImageWriter.xml, printer/Apple-ImageWriter_II.xml,
+	  printer/Apple-ImageWriter_LQ.xml, driver/iwlo.xml,
+	  driver/iwhi.xml, driver/iwlq.xml, opt/82.xml: Fixed entries for
+	  Apple ImageWriters. Added resolution option to ImageWriter LQ,
+	  added 120x72 dpi to all models.
+
 2003-07-21  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* driver/Postscript.xml: Updated the text to correspond to
